// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin implementation > generate API type 1`] = `
"import * as DChrono from "@duplojs/lang/chrono";

export type Routes = {
    readonly method: "GET";
    readonly path: "/user";
    readonly body: {
        readonly name: string;
        readonly age: number;
    };
    readonly headers: {
        readonly header1: DChrono.TheDate;
        readonly header2: DChrono.TheTime;
    };
    readonly responses: {
        readonly code: "422";
        readonly information: "extract-error";
        readonly body?: undefined;
    } | {
        readonly code: "409";
        readonly information: "the-conflict";
        readonly body?: undefined;
    } | {
        readonly code: "200";
        readonly information: "success";
        readonly body: string;
    };
};"
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 1`] = `
[
  "routes.d.ts",
  "export type ChildParser = string;

export type Routes = {
    readonly method: "GET";
    readonly path: "/generated";
    readonly body: {
        readonly child: ChildParser;
        readonly count: number;
    };
    readonly responses: {
        readonly code: "422";
        readonly information: "extract-error";
        readonly body?: undefined;
    } | {
        readonly code: "200";
        readonly information: "generated.success";
        readonly body: ChildParser;
    };
};",
]
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 2`] = `
[
  "generated/types.ts",
  "",
]
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 3`] = `
[
  "generated/childParserStructure.ts",
  "import * as DDataStructure from "@duplojs/lang/dataStructure";

export const childParserStructure = DDataStructure.TypeStructure(DDataStructure.StringType(), []);",
]
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 4`] = `
[
  "generated/bodyParserStructure.ts",
  "import * as DDataStructure from "@duplojs/lang/dataStructure";

import { childParserStructure } from "./childParserStructure";

export const bodyParserStructure = DDataStructure.ObjectStructure({
    child: childParserStructure,
    count: DDataStructure.TypeStructure(DDataStructure.NumberType(), [])
}, []);",
]
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 5`] = `
[
  "generated/index.ts",
  "export * from "./childParserStructure";
export * from "./bodyParserStructure";",
]
`;

exports[`plugin implementation > generate data parser files only from explicit data parsers when disabledFromRoute is enabled 1`] = `
[
  "routes.d.ts",
  "export type RouteParser = string;

export type Routes = {
    readonly method: "GET";
    readonly path: "/generated";
    readonly body: RouteParser;
    readonly responses: {
        readonly code: "422";
        readonly information: "extract-error";
        readonly body?: undefined;
    } | {
        readonly code: "204";
        readonly information: "generated.success";
        readonly body?: undefined;
    };
};",
]
`;

exports[`plugin implementation > generate data parser files only from explicit data parsers when disabledFromRoute is enabled 2`] = `
[
  "generated/types.ts",
  "",
]
`;

exports[`plugin implementation > generate data parser files only from explicit data parsers when disabledFromRoute is enabled 3`] = `
[
  "generated/explicitParserStructure.ts",
  "import * as DDataStructure from "@duplojs/lang/dataStructure";

export const explicitParserStructure = DDataStructure.TypeStructure(DDataStructure.NumberType(), []);",
]
`;

exports[`plugin implementation > generate data parser files only from explicit data parsers when disabledFromRoute is enabled 4`] = `
[
  "generated/index.ts",
  "export * from "./explicitParserStructure";",
]
`;
